# burrow

./: .dockerignore  .env.example  .gitattributes  .gitignore  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.ui  NOTICE  README.md  REUSE.toml  SECURITY.md  compose.prod.yml  docker-compose.e2e.yml  install-proxmox-node.sh  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/00-contracts-seams-golden-template/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-PLAN.md  00-04-SUMMARY.md  00-05-PLAN.md  00-05-SUMMARY.md  00-06-PLAN.md  00-06-SUMMARY.md  00-07-PLAN.md  00-CONTEXT.md  00-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS-v1.3.md  PITFALLS.md  PROXMOX-PRIMING.md  STACK.md  SUMMARY.md
CLA/: cla-entity.md  cla-individual.md
api/: config.py  main.py  pyproject.toml
api/compute/: fakeProvider.py  provider.py  proxmoxProvider.py
api/db/: postgresProvider.py  provider.py  sqliteProvider.py
api/db/migrations/: 001_init.sql  002_vmid_unique.sql  003_persistent_and_settings.sql  004_credentials_and_audit.sql
api/lib/: adminGate.py  capacity.py  credentialResolver.py  envelope.py  errors.py  logging.py  middleware.py  secretBox.py  statemachine.py
api/models/: base.py  compute.py  event.py  template.py  workspace.py
api/routers/: __init__.py  health.py  internal.py  nodes.py  setup.py  templates.py  terminal.py  workspaces.py
api/services/: __init__.py  reconciler.py  workspaceService.py
api/tests/: conftest.py
api/tests/boot/: __init__.py  conftest.py  stub_ttyd_bin  test_burrow_boot.py
api/tests/e2e/: __init__.py  stub_ttyd_server.py
api/tests/integration/: __init__.py  conftest.py  mock_proxmox.py  test_admin_secret_endpoint.py  test_bootconfig.py  test_capacity_race.py  test_create_async_202.py  test_create_auto_node.py  test_credentials_endpoint.py  test_health.py  test_lifespan.py  test_manifest_schema.py  test_mock_proxmox.py  test_nodes.py  test_nodes_multinode.py  test_proxmox_provider.py  test_security_headers.py  test_setup_api.py  test_setup_token_leak.py  test_terminal_proxy.py  test_vmid_reservation.py  test_workspaces_api.py
api/tests/unit/: __init__.py  test_admin_gate.py  test_capacity_guard.py  test_compensation.py  test_compute_override.py  test_create_saga.py  test_credential_resolver.py  test_credential_store.py  test_db_provider.py  test_envelope.py  test_fake_compute.py  test_fake_node_fractions.py  test_migrations.py  test_mint_credential.py  test_models.py  test_node_capacity_helper.py  test_node_selection.py  test_proxmox_predicates.py  test_reconciler.py  test_seam_leakage.py  test_secret_box.py  test_setup_caps.py  test_state_machine.py  test_wait_ttyd.py
cc-worker-config/: PRIMING.md
cc-worker-config/claude/: CLAUDE.md
cc-worker-config/plugins/: manifest.json  manifest.schema.json
cc-worker-config/systemd/: burrow-worker.service
deploy/nginx/: burrow.web.conf
deploy/systemd/: burrow.service
docs/: ci-cd-and-testing.md  tech-spec.md  test-it-out-checklist.md  v1.0-uat-checklist.md
docs/adr/: ADR-0001-sqlite-first.md  ADR-0002-boot-config-pull-at-boot.md  ADR-0003-proxmox-acl-scoping.md  ADR-0004-static-ip-from-vmid.md  ADR-0005-clone-mode-full.md  ADR-0006-ttyd-persistent-drop-once.md  ADR-0007-ttyd-lan-bind.md  ADR-0008-stack-version-bumps.md  ADR-0009-plugin-cadence-boot-time-latest.md  ADR-0010-in-process-reconciler-and-capacity-lock.md  ADR-0011-setup-state-store.md  ADR-0012-compute-provider-setup-caps.md  ADR-0013-persistence-model.md  ADR-0014-tmux-scrollback.md  ADR-0015-gui-managed-credential-store.md  ADR-0017-async-202-create.md  ADR-0018-multi-agent-worker-design-contract.md  ADR-0019-release-publish-trigger.md
docs/design/: burrow-ui-design-prompt.md  burrow-ui-mockup.html
ui/: biome.json  index.html  nginx.e2e.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.test.tsx  App.tsx  index.css  main.tsx  placeholder.ts  vite-env.d.ts
ui/tests/: css-rules.test.ts  setup.ts  tokens.test.ts
(+300 files in other folders)
