# SPDX-FileCopyrightText: 2026 Brave Bear Studios
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "burrow-api"
version = "0.1.0"
description = "Burrow control-plane API — FastAPI backend for managing concurrent Claude Code worker LXCs."
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "aiosqlite==0.22.1",
    "proxmoxer==2.3.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.16",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "reuse==6.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

# proxmoxer ships no type stubs / py.typed marker. Confine the missing-imports
# allowance to that one third-party module so strict mode stays in force on all
# first-party code (the proxmoxer symbol is itself confined to proxmoxProvider.py
# by the seam-leakage discipline).
[[tool.mypy.overrides]]
module = "proxmoxer.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
