# SPDX-FileCopyrightText: 2026 Brave Bear Studios
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "burrow-api"
version = "0.1.0"
description = "Burrow control-plane API — FastAPI backend for managing concurrent Claude Code worker LXCs."
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "aiosqlite==0.22.1",
    "proxmoxer==2.3.0",
    # proxmoxer's default https backend is requests-based but does NOT pull requests
    # itself (it's a proxmoxer extra). Declare it as a runtime dep so the production
    # image (built with `uv sync --no-dev`) includes it; otherwise the real-Proxmox
    # path crashes at startup with "requires 'requests' module". It was previously
    # present only transitively via the dev-only `responses`, so CI (Fake provider)
    # never exercised the gap.
    "requests==2.34.2",
    "httpx==0.28.1",
    # Upstream WebSocket *client* to the worker's ttyd (FastAPI/Starlette ship a WS
    # server, not a client). The terminal bridge imports it directly
    # (`from websockets.asyncio.client import connect`), so it is a direct dep —
    # not relied on transitively via uvicorn[standard]. Pinned to the STACK.md 16.0.
    "websockets==16.0",
    # Fernet credential encryption-at-rest for the GUI-managed credential store
    # (ADR-0015). Confined to lib/secretBox.py behind the SecretKeyProvider seam.
    "cryptography==49.0.0",
    # argon2id hashing for the local admin gate that protects the credential surface
    # (ADR-0015). `import argon2` is provided by argon2-cffi.
    "argon2-cffi==25.1.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.16",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "reuse==6.2.0",
    # responses mocks proxmoxer's underlying `requests` calls (proxmoxer is
    # requests-based, NOT httpx — respx cannot intercept it; see RESEARCH Pitfall 5).
    "responses==0.26.1",
    # respx mocks the httpx ttyd-health leg used by the Plan-04 saga integration tests.
    "respx==0.23.1",
    # jsonschema is the canonical reference validator (python-jsonschema/jsonschema,
    # years old, very high downloads). Phase-3 dev/CI dep for the plugin-manifest
    # schema gate; gated by the normal lockfile-freshness CI step (not a human-verify
    # checkpoint — it is a well-known package, not an [ASSUMED] one).
    "jsonschema==4.26.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

# proxmoxer ships no type stubs / py.typed marker. Confine the missing-imports
# allowance to that one third-party module so strict mode stays in force on all
# first-party code (the proxmoxer symbol is itself confined to proxmoxProvider.py
# by the seam-leakage discipline).
[[tool.mypy.overrides]]
module = "proxmoxer.*"
ignore_missing_imports = true

# jsonschema (the canonical reference validator) ships no type stubs / py.typed
# marker. Confine the missing-imports allowance to it so strict mode stays in
# force on all first-party code; it is only imported by the manifest-schema test.
[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
